@@ -21,27 +21,29 @@ import org.apache.parquet.hadoop.metadata.CompressionCodecName;
 
 import java.io.IOException;
 import java.util.LinkedList;
-import java.util.List;
 
 import static io.trino.parquet.ParquetCompressionUtils.decompress;
 
-class PageReader
+final class PageReader
 {
     private final CompressionCodecName codec;
     private final long valueCount;
-    private final List<DataPage> compressedPages;
+    private final LinkedList<DataPage> compressedPages;
     private final DictionaryPage compressedDictionaryPage;
 
-    public PageReader(CompressionCodecName codec, List<DataPage> compressedPages, DictionaryPage compressedDictionaryPage)
+    /**
+     * @param compressedPages This parameter will be mutated destructively as {@link DataPage} entries are removed as part of {@link #readPage()}. The caller
+     * should not retain a reference to this list after passing it in as a constructor argument.
+     */
+    public PageReader(CompressionCodecName codec,
+                      LinkedList<DataPage> compressedPages,
+                      DictionaryPage compressedDictionaryPage,
+                      long valueCount)
     {
         this.codec = codec;
-        this.compressedPages = new LinkedList<>(compressedPages);
+        this.compressedPages = compressedPages;
         this.compressedDictionaryPage = compressedDictionaryPage;
-        int count = 0;
-        for (DataPage page : compressedPages) {
-            count += page.getValueCount();
-        }
-        this.valueCount = count;
+        this.valueCount = valueCount;
     }
 
     public long getTotalValueCount()
@@ -54,7 +56,7 @@ class PageReader
         if (compressedPages.isEmpty()) {
             return null;
         }
-        DataPage compressedPage = compressedPages.remove(0);
+        DataPage compressedPage = compressedPages.removeFirst();
         try {
             if (compressedPage instanceof DataPageV1) {
                 DataPageV1 dataPageV1 = (DataPageV1) compressedPage;
@@ -62,30 +64,30 @@ class PageReader
                         decompress(codec, dataPageV1.getSlice(), dataPageV1.getUncompressedSize()),
                         dataPageV1.getValueCount(),
                         dataPageV1.getUncompressedSize(),
+                        dataPageV1.getFirstRowIndex(),
                         dataPageV1.getRepetitionLevelEncoding(),
                         dataPageV1.getDefinitionLevelEncoding(),
                         dataPageV1.getValueEncoding());
             }
-            else {
-                DataPageV2 dataPageV2 = (DataPageV2) compressedPage;
-                if (!dataPageV2.isCompressed()) {
-                    return dataPageV2;
-                }
-                int uncompressedSize = dataPageV2.getUncompressedSize()
-                        - dataPageV2.getDefinitionLevels().length()
-                        - dataPageV2.getRepetitionLevels().length();
-                return new DataPageV2(
-                        dataPageV2.getRowCount(),
-                        dataPageV2.getNullCount(),
-                        dataPageV2.getValueCount(),
-                        dataPageV2.getRepetitionLevels(),
-                        dataPageV2.getDefinitionLevels(),
-                        dataPageV2.getDataEncoding(),
-                        decompress(codec, dataPageV2.getSlice(), uncompressedSize),
-                        dataPageV2.getUncompressedSize(),
-                        dataPageV2.getStatistics(),
-                        false);
+            DataPageV2 dataPageV2 = (DataPageV2) compressedPage;
+            if (!dataPageV2.isCompressed()) {
+                return dataPageV2;
             }
+            int uncompressedSize = dataPageV2.getUncompressedSize()
+                    - dataPageV2.getDefinitionLevels().length()
+                    - dataPageV2.getRepetitionLevels().length();
+            return new DataPageV2(
+                    dataPageV2.getRowCount(),
+                    dataPageV2.getNullCount(),
+                    dataPageV2.getValueCount(),
+                    dataPageV2.getRepetitionLevels(),
+                    dataPageV2.getDefinitionLevels(),
+                    dataPageV2.getDataEncoding(),
+                    decompress(codec, dataPageV2.getSlice(), uncompressedSize),
+                    dataPageV2.getUncompressedSize(),
+                    dataPageV2.getFirstRowIndex(),
+                    dataPageV2.getStatistics(),
+                    false);
         }
         catch (IOException e) {
             throw new RuntimeException("Could not decompress page", e);
